Ajuste no título e da barra de scroll

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-architect
-title: GBittencourt
+title: GBittencourt Consultoria
 description: Home page da GBittencourt Consultoria
 show_downloads: false
 
