Reorganização para suportar multiplos idiomas

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-architect
-title: GBittencourt Consultoria
-description: Home page da GBittencourt Consultoria
+title: GBittencourt Consulting
+description: Home page da GBittencourt Consulting
 show_downloads: false
 
 # Google services
