--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,21 @@ google_analytics: UA-97992983-2
 # Jekyll plugins
 plugins:
   - jekyll-redirect-from
+
+langs:
+- id: pt
+  menu:
+  - area: main
+    label: Página principal
+  - area: articles
+    label: Artigos
+  - area: wiki
+    label: Wiki
+- id: en
+  menu:
+  - area: main
+    label: Home page
+  - area: articles
+    label: Articles
+  - area: wiki
+    label: Wiki
