--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ langs:
   menu:
   - area: main
     label: Página principal
+  - area: cv
+    label: CV
   - area: articles
     label: Artigos
   - area: contact
@@ -23,6 +25,8 @@ langs:
   menu:
   - area: main
     label: Home page
+  - area: cv
+    label: CV
   - area: articles
     label: Articles
   - area: contact
